Add change role for user, add update user
